# duckduckgo-search-cli

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.pt-BR.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.pt-BR.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  Cargo.toml  Cross.toml  INTEGRATIONS.md  INVERSIONS.md  INVERSIONS.pt-BR.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  README.pt-BR.md  SECURITY.md  SECURITY.pt-BR.md  build.rs  deny.toml  llms-full.txt  llms.pt-BR.txt  llms.txt  rust-toolchain.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benches/: decompress_bench.rs  extraction_bench.rs  tracing_overhead_bench.rs  zero_cause_bench.rs
config/: selectors.toml  user-agents.toml
docs/: AGENTS-GUIDE.md  AGENTS-GUIDE.pt-BR.md  AGENTS.pt-BR.md  AGENT_RULES.md  COOKBOOK.md  COOKBOOK.pt-BR.md  CROSS_PLATFORM.md  CROSS_PLATFORM.pt-BR.md  HOW_TO_USE.md  HOW_TO_USE.pt-BR.md  INSTALL-WINDOWS.md  INSTALL-WINDOWS.pt-BR.md  INTEGRATIONS.md  INTEGRATIONS.pt-BR.md  MIGRATION.md  MIGRATION.pt-BR.md  TESTING.md  TESTING.pt-BR.md
docs/decisions/: 0001-tls-boring-via-wreq.md  0002-anti-bot-detector-overhaul-v0-7-8.md  0005-http-decompression-v0-8-0.md  0007-chrome-primary-transport-v0-8-0.md  0008-reqwest-rustls-v0-8-6.md
docs/schemas/: README.md
examples/: decompress_demo.rs  zero_cause_demo.rs
skill/duckduckgo-search-cli-en/: SKILL.md  eval-queries.json
skill/duckduckgo-search-cli-pt/: SKILL.md  eval-queries.json
src/: aggregation.rs  browser.rs  cli.rs  config_init.rs  content.rs  content_fetch.rs  cookie_adapter.rs  decomposition.rs  decompress.rs  deep_research.rs  error.rs  extraction.rs  fetch_conteudo.rs  http.rs  identity.rs  lib.rs  main.rs  output.rs  parallel.rs  paths.rs  pipeline.rs  platform.rs  probe_deep.rs  search.rs  selectors.rs  session_warmup.rs  signals.rs  synthesis.rs  types.rs  wreq_cookie_adapter.rs
tests/: e2e_cli.rs  integracao_fetch_conteudo.rs  integracao_fixtures.rs  integracao_parallel.rs  integracao_pipeline.rs  integracao_search_retry.rs  integracao_wiremock.rs  integration_audit_gap_aud_003.rs  integration_content_fetch.rs  integration_decompression.rs  integration_deep_research.rs  integration_e2e_real_world.rs  integration_fixtures.rs  integration_parallel.rs  integration_pipeline.rs  integration_post_pipeline_invariants.rs  integration_search_retry.rs  integration_stealth_block_classification.rs  integration_wiremock.rs  loom_atomics.rs
tests/fixtures/: ddg_html_pagina_1.html  ddg_lite_pagina_1.html  interstitial_cloudflare_turnstile.html  interstitial_ddg_anomaly.html
