[package]
name = "duckduckgo-search-cli"
version = "0.6.10"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "CLI in Rust to search DuckDuckGo via pure HTTP, with structured output for LLM consumption."
authors = ["comandoaguiar"]
readme = "README.md"
keywords = ["search", "duckduckgo", "cli", "ai-agent", "llm"]
categories = ["command-line-utilities", "web-programming"]
repository = "https://github.com/daniloaguiarbr/duckduckgo-search-cli"
homepage = "https://github.com/daniloaguiarbr/duckduckgo-search-cli"
documentation = "https://docs.rs/duckduckgo-search-cli"
default-run = "duckduckgo-search-cli"
exclude = [
    ".serena/",
    ".serena/**",
    "logs/",
    "logs/**",
    "CLAUDE.md",
    "docs_prd/",
    "docs_prd/**",
    "docs_rules/",
    "docs_rules/**",
    ".claude/",
    ".claude/**",
    "projeto_duckduckgo-search-cli.md",
    ".github/",
    "tests/fixtures/",
    "*.log",
    "skill/",
    "skill/**",
    "graphrag.sqlite",
    "graphrag.sqlite-shm",
    "graphrag.sqlite-wal",
    "gaps.md",
    ".ingest-queue.sqlite",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "duckduckgo-search-cli"
path = "src/main.rs"

[lib]
name = "duckduckgo_search_cli"
path = "src/lib.rs"

[[bench]]
name = "extraction_bench"
harness = false

[dependencies]
# Async runtime — Tokio multi-threaded with full features (signal, macros, rt-multi-thread, fs, io-util, etc.)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal", "io-util", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP client — rustls-tls for universal cross-platform (no OpenSSL/SChannel dependency).
# default-features = false removes native-tls which would pull OpenSSL on Linux.
# "socks" feature added in iteration 5 to support --proxy socks5://... (tunnel via hyper-socks2).
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "cookies",
    "gzip",
    "brotli",
    "socks",
] }

# HTML parsing — scraper uses html5ever from Servo, tolerant of malformed HTML.
scraper = "0.20"

# CLI — clap derive for declarative parsing.
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Serialization — serde + serde_json for JSON, toml for configuration files.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# URL encoding/decoding (to unwrap DuckDuckGo /l/?uddg= redirects).
urlencoding = "2"

# Error handling — thiserror for typed CliError enum across all library modules.
thiserror = "2"

# Logging — tracing + tracing-subscriber with env-filter for RUST_LOG.
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random User-Agent selection.
rand = "0.8"

# WS-25: ProgressBar for long crawls (--fetch-content --parallel).
# TTY detection is automatic — bars are silently hidden in pipes.
indicatif = "0.18"

# RFC 3339 timestamps for JSON metadata.
chrono = { version = "0.4", features = ["serde"] }

# XDG cross-platform for configuration directories.
dirs = "5"

# Hashing for selectors_hash in metadata.
blake3 = "1"

# Encoding detection for non-UTF-8 pages (only used in fetch-content in upcoming iterations;
# declared now because the specification lists it as an MVP dependency).
encoding_rs = "0.8"

# Optional dependencies for the chrome feature (NOT compiled in MVP — only declared for the next iteration).
# The "fetcher" feature of chromiumoxide requires the companion crate chromiumoxide_fetcher which currently
# has an import bug in 0.7.0; therefore we only enable "tokio-runtime" here. The Chromium auto-download
# functionality can be added via an explicit dependency when implementing fetch-content in iteration 5.
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], optional = true }
tempfile = { version = "3", optional = true }
futures = { version = "0.3", optional = true }

# Optional: tokio-console for runtime task debugging.
console-subscriber = { version = "0.4", optional = true }

# Windows-conditional — SetConsoleOutputCP for UTF-8 in cmd.exe and legacy PowerShell console.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[dev-dependencies]
# Performance benchmarks — criterion for statistically valid measurements.
criterion = { version = "0.5", features = ["html_reports"] }

# Mock HTTP server for integration tests without real network calls.
# Chosen in 2026-04 per trustScore 9.3 on context7; compatible with tokio runtime.
wiremock = "0.6"
# E2E tests of the compiled binary via assert_cmd + predicates (section 20.2 of rules_rust.md).
assert_cmd = "2"
predicates = "3"
# TempDir for E2E tests (even without chrome feature).
tempfile = "3"

# Loom for concurrency interleaving tests (AtomicBool rate-limit flag).
# NOTE: loom does NOT support tokio::sync::Semaphore — only std primitives.
# Run with: RUSTFLAGS="--cfg loom" cargo test --test loom_atomics --release
[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"

[features]
default = []
# Chrome feature gate — enables headless Chrome fallback for --fetch-content in future iterations.
chrome = ["chromiumoxide", "tempfile", "futures"]
# Enable tokio-console for runtime task debugging during development.
# Run with: cargo run --features console
console = ["dep:console-subscriber"]

[lints.rust]
improper_ctypes = "deny"
improper_ctypes_definitions = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(tokio_unstable)'] }

[lints.clippy]
doc_markdown = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "deny"

[badges.maintenance]
status = "actively-developed"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev.package."*"]
opt-level = 2
